# rules_android

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  maven_install.json
.bcr/: metadata.template.json
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  release_prep.sh
android/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl
android/private/: BUILD.bazel  fullstory_android_binary.bzl
android/tests/: versions_test.bzl
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
patches/bazelbuild/rules_android/: rules_bzl_lib.patch
tools/: update_bzlmod_lockfile.sh
