load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "fullstory_android_binary",
    srcs = ["fullstory_android_binary.bzl"],
    visibility = ["//android:__subpackages__"],
    deps = ["@rules_android//android:rules"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//android:__subpackages__"],
)
