load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "FullstoryInjector",
    main_class = "com.fullstory.FullstoryInjector",
    runtime_deps = ["@fs_maven//:com_fullstory_instrumentation_full"],
)

bzl_library(
    name = "fullstory_android_binary",
    srcs = ["fullstory_android_binary.bzl"],
    visibility = ["//android:__subpackages__"],
    deps = [
        "@rules_android//rules",
        "@rules_android//rules:utils",
    ],
)
