# Override http_archive for local testing
local_repository(
    name = "fullstory_rules_android",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# fullstory_rules_android setup #
######################
# Fetches the fullstory_rules_android dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@fullstory_rules_android//android:repositories.bzl", "rules_android_dependencies")

rules_android_dependencies()
